# Risk_Analysis

./: Risk_analysis_development.md  api_documentation.md  pyproject.toml  risk_analysis_agent_explanation.md  test_response.json  test_response_v2.json
.gemini/: settings.json
app/: main.py
app/agent/: risk_agent.py  system_prompt.py
app/agent/scoring/: composite_scorer.py  escalation_scorer.py  exposure_scorer.py  hazard_scorer.py  response_scorer.py  terrain_classifier.py  vulnerability_scorer.py
app/agent/tools/: disaster_data_tool.py  infrastructure_tool.py  location_tool.py  web_search_tool.py
app/api/routes/: assessment_controller.py  health_controller.py
app/core/: config.py  exceptions.py  logger.py
app/database/: connection.py
app/database/queries/: disaster_data_queries.py  infrastructure_queries.py  location_queries.py
app/models/: input_models.py  output_models.py
