[project]
name = "climasync-risk-analysis-agent"
version = "1.0.0"
description = "ClimaSync Risk Analysis Agent"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai-agents",
    "openai",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "python-dotenv",
    "tenacity",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
